kubernetes-dashboard/ingressRoute_dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`kubernetes.test`)
    middlewares:
    - name: kubernetes-oauth-redirect
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kubernetes-oauth-redirect
spec:
  forwardAuth:
    address: http://oauth.kubernetes.test/
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Access-Token
      - Authorization
      - X-Auth-Request-Redirect
